// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScrollRevealFrame > renders correct HTML structure (all props set) 1`] = `
"<figure class="scroll-reveal-frame custom-class" style="--scroll-reveal-frame-height: 400px; --scroll-reveal-frame-parallax-offset: 20rem; --scroll-reveal-frame-radius: 1.6rem;">
  <div class="scroll-reveal-frame-content"></div>
</figure>"
`;

exports[`ScrollRevealFrame > renders correct HTML structure (default props) 1`] = `
"<figure class="scroll-reveal-frame">
  <div class="scroll-reveal-frame-content"></div>
</figure>"
`;
